--- a/task 2.html
+++ b/task 2.html
@@ -34,7 +34,7 @@
       <img src="green-chameleon-s9CC2SKySJM-unsplash.jpg" alt=".">
        <div class="name">
     <p>
-     <li>A first year ug student in the department of Geology and Geophysics at IIT Kharagpur.</li>
+     <li>A first year UG student in the department of Geology and Geophysics at IIT Kharagpur.</li>
      <li>completed 12th at PJC.</li>
      <li>completed 10th at MVR.</li>
     </p>
