--- a/task 2.html
+++ b/task 2.html
@@ -51,7 +51,7 @@
      <li>learnt finance for startups from coursera</li>
      <li>Teamwork. ...
       Self-management. ...
-      Willingness to learn. .Positive attitude...</li>
+      Willingness to learn. .Positive attitude..</li>
       <li>Good communication skills</li>
       </div>
     </div>
