--- a/task 2.html
+++ b/task 2.html
@@ -35,8 +35,8 @@
        <div class="name">
     <p>
      <li>A first year UG student in the Department of Geology and Geophysics at IIT Kharagpur.</li>
-     <li>completed 12th standard at PJC.</li>
-     <li>completed 10th standard at MVR.</li>
+     <li>Completed 12th standard at PJC.</li>
+     <li>Completed 10th standard at MVR.</li>
     </p>
       </div>
   </div>
