--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
        <div class="name">
     <p>
      <li>A first year UG student in the Department of Geology and Geophysics at IIT Kharagpur.</li>
-     <li>Completed 12th standard at PJC.</li>
-     <li>Completed 10th standard at MVR.</li>
+     <li>Completed 12th standard at PJC (99%).</li>
+     <li>Completed 10th standard at MVR (9.7/10).</li>
     </p>
       </div>
   </div>
@@ -49,10 +49,13 @@
       <li>basics of html and css </li>
      <li> basics of python</li>
      <li>learnt finance for startups from coursera</li>
+     <li>Good command in java programming </li>
+     <li>Have decent knowledge in C programming</li>
      <li>Teamwork. ...
       Self-management. ...
       Willingness to learn. .Positive attitude..</li>
       <li>Good communication skills</li>
+      <li>Time management</li>
       </div>
     </div>
   </section>
@@ -66,7 +69,8 @@
         <p>
           <li>I am from Nalgonda,Telangana.</li>
           <li>Interested in exploring new things.</li>
-          <li>Working as JEM at GYWS</li>
+          <li>Worked as executive member at GYWS</li>
+          <li>Serving as executive member at Prithvi.</li>
           <li>Interested in coding , because I love solving problems and the sense of accomplishment.</li>
           <li>My hobbies include dancing,reading books,watching T.V</li>
         </p>
@@ -78,9 +82,7 @@
 <section id="contact">
   <h1 class="heading">Contact Me</h1>
   <a href="https://www.facebook.com/profile.php?id=100077482952452" target=_blank id="links">Facebook</a>
-  <a href="https://www.instagram.com/sankoju_keerthi/" target=_blank id="links">Instagram</a>
   <a href="https://www.linkedin.com/in/sankoju-keerthi-840732231" target=_blank id="links">Linkedin</a>
-   <a href="feedback form.html" target="_blank" id="links">feedback form</a><p id="mm">kindly fill the feedback form</p>
 
   <form action="" class="form">
     <input type="text" name="name" class="input" placeholder="Enter your name">
