--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <img src="green-chameleon-s9CC2SKySJM-unsplash.jpg" alt=".">
        <div class="name">
     <p>
-     <li>A first year UG student in the Department of Geology and Geophysics at IIT Kharagpur.</li>
+     <li>A second year undergraduate student in the Department of Geology and Geophysics at IIT Kharagpur.</li>
      <li>Completed 12th standard at PJC (99%).</li>
      <li>Completed 10th standard at MVR (9.7/10).</li>
     </p>
